# ad-world-models

./: .gitignore  README.md  pyproject.toml
configs/: e2e_planner.yaml  vla_agent.yaml  world_model.yaml
notebooks/: full_pipeline_demo.ipynb
scripts/: demo_vista.py  download_nuscenes_mini.py  interactive_metadrive.py  precompute_bev.py  run_vista_scenarios.py  run_vista_single.py  train_e2e_planner.py  train_vla_3d.py  train_vla_agent.py  train_world_model.py
src/: __init__.py
src/e2e_planner/: __init__.py  demo.py  model.py
src/rl_sim/: __init__.py  demo.py  metadrive_demo.py  metadrive_train.py  train.py
src/visualization/: __init__.py  bev_visualizer.py  trajectory_visualizer.py
src/vla_agent/: __init__.py  demo.py  model.py
src/vla_sim/: __init__.py  demo.py  demo_3d.py  env.py  env_3d.py  model.py  train.py  train_3d.py  video.py
src/world_model/: __init__.py  demo.py  model.py
