[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ad-world-models"
version = "0.1.0"
description = "End-to-end autonomous driving: VLA agents, world models, and planning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.36.0",
    "diffusers>=0.25.0",
    "accelerate>=0.25.0",
    "einops>=0.7.0",
    "timm>=0.9.12",
    "nuscenes-devkit>=1.1.11",
    "pyquaternion>=0.9.9",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["src*"]
